# f8s

./: .cruft.json  .devcontainer.json  .env  README.md  f8s.code-workspace
docker/: dev.dockerfile  docker-compose.yml  prod.dockerfile
docker/config/: build.yaml  pyproject.toml  zshrc
docker/config/jupyter/: jupyter_lab_config.py
docker/scripts/: prod-cli  test_app.py  x_tools.sh
docs/: .buildinfo  all_metrics.html  cli.html  cyclomatic_complexity_metrics.html  genindex.html  halstead_metrics.html  index.html  intro.html  maintainability_metrics.html  modules.html  objects.inv  py-modindex.html  raw_metrics.html  search.html  searchindex.js
docs/.doctrees/: cli.doctree  environment.pickle  index.doctree  intro.doctree  modules.doctree
docs/_modules/: cli.html  index.html
docs/_modules/f8s/: extension.html  tools.html
docs/_modules/flask/: blueprints.html
docs/_sources/: modules.rst.txt
docs/htmlcov/: d_1a74c9b9e930243a_extension_py.html  d_1a74c9b9e930243a_test_app_py.html  d_1a74c9b9e930243a_tools_py.html  index.html  status.json
helm/: Chart.yaml  README.md  values.yaml
helm/templates/: argocd-application.yaml  configmap.yaml  deployment.yaml  desktop-volume.yaml  env-configmap.yaml  env-secret.yaml  namespace.yaml  nginx-ingress.yaml  repo-volume.yaml  secret.yaml  service.yaml  traefik-ingress.yaml
python/: cli.py  conftest.py
python/f8s/: __init__.py  api.py  api_test.py  app.py  app_test.py  command.py  demo.py  extension.py  extension_test.py  test_app.py  tools.py  tools_test.py
python/f8s/core/: __init__.py  tools_test.py
sphinx/: conf.py  core.rst  index.rst  modules.rst  server.rst
